--- a/css/style.css
+++ b/css/style.css
@@ -5,31 +5,74 @@
 }
 
 body {
+    position: relative;
     background-color: rgba(19, 20, 23, 0.9);
     color: #fff;
     font: 500 12px/24px Roboto, Arial, Helvetica, sans-serif;
 }
 
-.container {
-    max-width: 1480px;
-    margin: 0 auto;
-    padding-left: 20px;
-    padding-right: 20px;
+.calendar__overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(19, 20, 23, 0.9);    
 }
 
-.button {
-    display: inline-block;
-    vertical-align: top;    
-    color: #fff;
-    background-color: rgba(140, 50, 255, 1);
-    padding: 8px 16px;    
-    border-radius: 8px;
+.calendar {
+    max-width: 320px;
+    min-width: 240px;
+    margin: 0 auto;
+    padding: 8px;    
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    background: url(../img/alpaca.jpg) no-repeat center;
+    border-radius: 6px;
+    z-index: -1;
+}
+
+.calendar__head {
+    display: flex;
+    flex-grow: 1;
+    width: 100%;
+    align-items: center;
+    margin-bottom: 8px;
+}
+
+.calendar__prev-month {
+    width: 32px;
+    height: 32px;
+    background: url(../img/shape-prev.png) no-repeat center;
     cursor: pointer;
-    text-decoration: none;
     border: none;
-    text-align: center;    
-    font: 500 18px/24px Roboto, Arial, Helvetica, sans-serif;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
+}
+
+.calendar__month {
+    font: 500 12px/14px Roboto, Arial, Helvetica, sans-serif;
+    text-transform: uppercase;
+    margin: 0 auto;
+}
+
+.calendar__next-month {
+    width: 32px;
+    height: 32px;
+    background: url(../img/shape-next.png) no-repeat center;
+    cursor: pointer;
+    border: none;
+}
+
+.calendar__date {
+    width: 14.2857%;
+    color: #fff;
+    background-color: transparent;
+    padding: 10px;    
+    cursor: pointer;
+    border: none;  
+    font: 500 12px/24px Roboto, Arial, Helvetica, sans-serif;
+}
+
+.calendar__next-month-date {
+    color: rgba(255, 255, 255, 0.5);
 }
