--- a/css/style.css
+++ b/css/style.css
@@ -5,32 +5,38 @@
 }
 
 body {
-    position: relative;
+    display: flex;
+    gap: 20px;
     background-color: rgba(19, 20, 23, 0.9);
     color: #fff;
     font: 500 12px/24px Roboto, Arial, Helvetica, sans-serif;
 }
 
-.calendar__overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(19, 20, 23, 0.9);    
-}
-
 .calendar {
+    position: relative;
     max-width: 320px;
     min-width: 240px;
     margin: 0 auto;
-    padding: 8px;    
+    padding: 8px;
     display: flex;
     flex-wrap: wrap;
+    flex-shrink: 0;
     align-items: center;
-    background: url(../img/alpaca.jpg) no-repeat center;
+    background: url(../img/alpaca.jpg) no-repeat top left/cover;
     border-radius: 6px;
+    z-index: 0;
+}
+
+.calendar::before {
+    content: '';
+    position: absolute;
+    inset: 0;
+    background-color: rgba(19, 20, 23, 0.9);
     z-index: -1;
+    /* z-index: 0  у элемента показывает слой псевдоэлемента */
+    pointer-events: none;
+    /* отключить взаимодействие с блоком, недоступен для клика */
+    border-radius: 6px;
 }
 
 .calendar__head {
@@ -41,38 +47,101 @@ body {
     margin-bottom: 8px;
 }
 
-.calendar__prev-month {
+.calendar__btn {
+    padding: 0;
+    border: 0;
+    cursor: pointer;
+    background-color: transparent;
+    color: #fff;
     width: 32px;
     height: 32px;
-    background: url(../img/shape-prev.png) no-repeat center;
-    cursor: pointer;
-    border: none;
+    display: flex;
+    /* подстраховка для центрирования кнопки */
+    align-items: center;
+    justify-content: center;
+    flex-shrink: 0;
+}
+
+.calendar__btn-icon {
+    width: 8px;
+    height: 12px;
+}
+
+.calendar__btn._next .calendar__btn-icon {
+    transform: rotate(180deg);
 }
 
 .calendar__month {
     font: 500 12px/14px Roboto, Arial, Helvetica, sans-serif;
     text-transform: uppercase;
-    margin: 0 auto;
-}
-
-.calendar__next-month {
-    width: 32px;
-    height: 32px;
-    background: url(../img/shape-next.png) no-repeat center;
-    cursor: pointer;
-    border: none;
+    flex-grow: 1;
+    text-align: center;
 }
 
 .calendar__date {
-    width: 14.2857%;
+    position: relative;
+    width: calc(100% / 7);
+    /* функция расчета ширины ячеек */
+    aspect-ratio: 1;
+    /* пропорция ширины ячеек в зависимости от экрана */
     color: #fff;
     background-color: transparent;
-    padding: 10px;    
     cursor: pointer;
-    border: none;  
+    border: none;
     font: 500 12px/24px Roboto, Arial, Helvetica, sans-serif;
+    z-index: 0;
+    padding: 4px;
+    background-clip: content-box;
 }
 
-.calendar__next-month-date {
+.calendar__date::before {
+    content: '';
+    position: absolute;
+    inset: 6px;
+    z-index: -1;
+}
+
+.calendar__date._start {
+    border-radius: 50% 0 0 50%;
+}
+
+.calendar__date._end {
+    border-radius: 0 50% 50% 0;
+}
+
+.calendar__date._end._start {
+    border-radius: 50%;
+}
+
+.calendar__date._start::before,
+.calendar__date._end::before {
+    border-radius: 50%;
+    background-color: rgba(19, 20, 23, 0.1);
+    border: 1px solid rgba(19, 20, 23, 0.3);
+}
+
+.calendar__date._next {
     color: rgba(255, 255, 255, 0.5);
 }
+
+.calendar__date._active {
+    background-color: #2D9CDB;
+}
+
+.calendar__date._active:not(.calendar__date._start._end._active):not(.calendar__date._end._active)::after {
+    content: '';
+    position: absolute;
+    background-color: #2D9CDB;
+    inset: 4px -8px 4px auto;
+    z-index: -1;
+    width: 12px;
+}
+
+/* .calendar__date._active:not(.calendar__date._start._end._active):not(.calendar__date._start._active)::after {
+    content: '';
+    position: absolute;
+    background-color: #2D9CDB;
+    inset: 4px auto 4px -8px;
+    z-index: -1;
+    width: 12px;
+} */
