--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,6 @@ body {
     position: relative;
     max-width: 320px;
     min-width: 240px;
-    margin: 0 auto;
-    padding: 8px;
     display: flex;
     flex-wrap: wrap;
     flex-shrink: 0;
@@ -83,65 +81,60 @@ body {
     width: calc(100% / 7);
     /* функция расчета ширины ячеек */
     aspect-ratio: 1;
-    /* пропорция ширины ячеек в зависимости от экрана */
+    /* пропорция ширины и высоты ячеек в зависимости от экрана */
     color: #fff;
     background-color: transparent;
     cursor: pointer;
     border: none;
     font: 500 12px/24px Roboto, Arial, Helvetica, sans-serif;
     z-index: 0;
-    padding: 4px;
-    background-clip: content-box;
 }
 
+.calendar__date::after,
 .calendar__date::before {
     content: '';
     position: absolute;
-    inset: 6px;
     z-index: -1;
 }
 
-.calendar__date._start {
-    border-radius: 50% 0 0 50%;
+.calendar__date::before {
+    inset: 4px;
 }
 
-.calendar__date._end {
-    border-radius: 0 50% 50% 0;
+.calendar__date::after {
+    inset: 6px;
 }
 
-.calendar__date._end._start {
-    border-radius: 50%;
-}
-
-.calendar__date._start::before,
-.calendar__date._end::before {
+.calendar__date._start::after,
+.calendar__date._end::after {
     border-radius: 50%;
     background-color: rgba(19, 20, 23, 0.1);
     border: 1px solid rgba(19, 20, 23, 0.3);
 }
 
+.calendar__date._active::before {
+    right: 0;
+    left: 0;
+    background-color: #2D9CDB;
+}
+
+.calendar__date._start::before {
+    left: 4px;
+    border-top-left-radius: 50%;
+    border-bottom-left-radius: 50%;
+}
+
+.calendar__date._end::before {
+    right: 4px;
+    border-top-right-radius: 50%;
+    border-bottom-right-radius: 50%;
+}
+
+.calendar__date._start._end::before {
+    inset: 4px;
+    border-radius: 50%;
+}
+
 .calendar__date._next {
     color: rgba(255, 255, 255, 0.5);
 }
-
-.calendar__date._active {
-    background-color: #2D9CDB;
-}
-
-.calendar__date._active:not(.calendar__date._start._end._active):not(.calendar__date._end._active)::after {
-    content: '';
-    position: absolute;
-    background-color: #2D9CDB;
-    inset: 4px -8px 4px auto;
-    z-index: -1;
-    width: 12px;
-}
-
-/* .calendar__date._active:not(.calendar__date._start._end._active):not(.calendar__date._start._active)::after {
-    content: '';
-    position: absolute;
-    background-color: #2D9CDB;
-    inset: 4px auto 4px -8px;
-    z-index: -1;
-    width: 12px;
-} */
